@@ -18,7 +18,7 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP-FILTER @MAN_MISC_INFO@ "12 March 2023"
+.TH PCAP-FILTER @MAN_MISC_INFO@ "13 June 2023"
 .SH NAME
 pcap-filter \- packet filter syntax
 .br
@@ -556,6 +556,9 @@ Packet was sent by the host performing the capture rather than being
 received by that host.  This is only supported for certain link-layer types,
 such as SLIP and the ``cooked'' Linux capture mode
 used for the ``any'' device and for some other device types.
+.IP "\fBifindex \fIinterface_index\fR"
+True if the packet was logged via the specified interface (applies only to
+packets logged by the Linux "any" cooked v2 interface).
 .IP "\fBifname \fIinterface\fR"
 True if the packet was logged as coming from the specified interface (applies
 only to packets logged by OpenBSD's or FreeBSD's
@@ -1175,6 +1178,10 @@ TCP flag names became available in libpcap 1.9.0.
 The
 .B geneve
 keyword became available in libpcap 1.8.0.
+.PP
+The
+.B ifindex
+keyword became available in libpcap 1.10.0.
 .SH SEE ALSO
 .BR pcap (3PCAP)
 .SH BUGS
