@@ -522,6 +522,8 @@ void	pcap_breakloop_common(pcap_t *);
  *
  * "pcap_add_dev()" adds an entry to a pcap_if_list_t.
  *
+ * "pcap_add_any_dev()" adds an entry for the "any" device to a pcap_if_list_t.
+ *
  * "pcap_find_dev()" tries to find a device, by name, in a pcap_if_list_t.
  *
  * "pcap_find_or_add_dev()" checks whether a device is already in a
@@ -540,6 +542,7 @@ pcap_if_t *pcap_find_or_add_dev(pcap_if_list_t *, const char *, bpf_u_int32,
 pcap_if_t *pcap_find_dev(pcap_if_list_t *, const char *);
 pcap_if_t *pcap_add_dev(pcap_if_list_t *, const char *, bpf_u_int32,
 	    const char *, char *);
+pcap_if_t *pcap_add_any_dev(pcap_if_list_t *, char *);
 int	pcap_add_addr_to_dev(pcap_if_t *, struct sockaddr *, size_t,
 	    struct sockaddr *, size_t, struct sockaddr *, size_t,
 	    struct sockaddr *dstaddr, size_t, char *errbuf);
